# facturation_manager

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
.github/workflows/: ci.yml
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
facturation/: conftest.py
facturation/clients/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
facturation/clients/migrations/: 0001_initial.py  0002_alter_client_options_client_code_postal_and_more.py  0003_alter_client_adresse_alter_client_code_postal_and_more.py  0004_client_clients_cli_owner_i_d3c68e_idx_and_more.py
facturation/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
facturation/core/: apps.py  decorators.py  mixins.py
facturation/dashboard/: apps.py  urls.py  views.py
facturation/invoices/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
facturation/invoices/migrations/: 0001_initial.py  0002_invoiceline_product_alter_invoiceline_description_and_more.py
facturation/products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
facturation/products/migrations/: 0001_initial.py  0002_category_product_category_and_more.py
facturation/static/css/src/: input.css
facturation/static/js/: app.js  modal.js  navbar.js  toast.js
facturation/static/js/pages/: clients.js  dashboard.js  invoices.js  products.js
facturation/static/js/utils/: formatters.js  helpers.js  validators.js
facturation/templates/: base.html
facturation/templates/account/: base_entrance.html  login.html  signup.html
facturation/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
facturation/templates/components/: alerts.html  button.html  pagination.html
facturation/templates/dashboard/: home.html
facturation/templates/invoices/: _line_row.html  invoice_confirm_delete.html  invoice_detail.html  invoice_form.html  invoice_list.html  invoice_pdf.html
facturation/templates/layouts/: alert.html  breadcrumb.html  empty_state.html  footer.html  modal.html  navbar.html  pagination.html  search_bar.html  sidebar.html
facturation/templates/products/: category_confirm_delete.html  category_form.html  category_list.html  product_confirm_delete.html  product_form.html  product_list.html
facturation/users/: adapters.py  apps.py  forms.py  models.py  views.py
facturation/users/migrations/: 0001_initial.py
facturation/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
locale/en/LC_MESSAGES/: django.po
locale/en_US/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po  django.po.save
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
