[project]
name = "facturation"
version = "0.1.0"
description = "Application robuste de gestion de facturation"
readme = "README.md"
license = { text = "Not open source" }
authors = [
  { name = "tchongwang bakayoko", email = "tchongwangbakayoko619@gmail.com" },
]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi==25.1.0",
  "crispy-bootstrap5==2026.3",
  "django==6.0.7",
  "django-allauth[mfa]==65.18.0",
  "django-anymail==15.0",
  "django-crispy-forms==2.6",
  "django-environ==0.14.0",
  "django-model-utils==5.0.0",
  "django-redis==7.0.0",
  "gunicorn==26.0.0",
  "hiredis==3.4.0",
  "pillow==12.3.0",
  "psycopg[c]==3.3.4",
  "python-slugify==8.0.4",
  "redis==8.0.1",
  "whitenoise==6.12.0",
  "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
  "coverage==7.15.0",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==7.0.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==6.0.6",
  "django-upgrade==1.31.1",
  "djlint==1.40.5",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "isort>=8.0.1",
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "psycopg[c]==3.3.4",
  "pytest==8.3.5",
  "pytest-django==4.12.0",
  "pytest-sugar==1.1.1",
  "ruff==0.15.21",
  "sphinx==9.1.0",
  "sphinx-autobuild==2025.8.25",
  "werkzeug[watchdog]==3.1.8",
]

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = [
    "E501",    # lignes trop longues
    "COM812",  # virgule finale manquante
    "TRY003",  # message d'exception
    "EM101",   # chaîne dans ValidationError
    "EM102",   # f-string dans ValidationError
    "PLC0415", # import dans une fonction
    "PTH113",  # os.path.isfile()
    "PTH118",  # os.path.join()
    "SLF001",  # accès à un membre privé
    "W292",    # pas de nouvelle ligne en fin de fichier
    "W293",    # espaces sur une ligne vide
    "I001",    # imports non triés
    "H006",
    "H030",
    "H031",
    "T002"
]

include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"
css.indent_size = 2
js.indent_size = 2

# ==== ruff ====
[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "*/migrations/*.py",
  "staticfiles/*",
]

lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "DJ012",
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "SIM102", # sometimes it's better to nest
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]
lint.isort.force-single-line = true

# ==== pyproject-fmt ====
[tool.pyproject-fmt]
keep_full_version = true

# ==== pytest ====
[tool.pytest.ini_options]
addopts = [
  "--ds=config.settings.test",
  "--reuse-db",
  "--import-mode=importlib",
]
minversion = "8.0"
python_files = [
  "tests.py",
  "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = [ "facturation/**" ]
omit = [ "*/migrations/*", "*/tests/*" ]
plugins = [ "django_coverage_plugin" ]

# ==== mypy ====
[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
  "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"